--- a/public_html/index.html
+++ b/public_html/index.html
@@ -51,11 +51,11 @@
                     <div class="item-number">5.</div>
                 </div>
                 <div id="edit-items">
-                    <div id='item-1' class="top5-item"></div>
-                    <div id='item-2' class="top5-item"></div>
-                    <div id='item-3' class="top5-item"></div>
-                    <div id='item-4' class="top5-item"></div>
-                    <div id='item-5' class="top5-item"></div>
+                    <div id='item-1' class="top5-item" draggable="true"></div>
+                    <div id='item-2' class="top5-item" draggable="true"></div>
+                    <div id='item-3' class="top5-item" draggable="true"></div>
+                    <div id='item-4' class="top5-item" draggable="true"></div>
+                    <div id='item-5' class="top5-item" draggable="true"></div>
                 </div>
             </div>
         </div>
